@@ -15,18 +15,19 @@ gboolean add_filter_ex(char *name, filter_function f, char *classname, int prior
 	return TRUE;
 }
 
+void add_new_client_hook(char *name, new_client_hook h) {}
+
 int main(int argc, char **argv)
 {
 	struct line *l;
 	char buf[4096];
-	char *raw;
 	xmlNodePtr cur = xmlNewNode(NULL, "plugin");
 
 	if(argc < 2) {
 		fprintf(stderr, "Usage: %s plugin-path\n", argv[0]);
 		return 1;
 	}
-	
+
 	xmlSetProp(cur, "file", argv[1]);
 
 	load_plugin(cur);
@@ -40,9 +41,7 @@ int main(int argc, char **argv)
 		fgets(buf, sizeof(buf), stdin);
 		l = irc_parse_line(buf);
 		if(l) {
-			raw = irc_line_string(l);
-			ff(l);
-			free(raw);
+			if(l->argc != 0 && ff)ff(l);
 			free_line(l);
 		} else { 
 			fprintf(stderr, "Unparseable\n");
